# wr2023

./: README.md  pyproject.toml
figs/: model.py  transform.py
src/wr2023/: DSCM.py  filtering.py  info.py  loader.py  main.py  model_fitting.py  model_metrics.py  transform_computing.py  trimming.py  utils.py
