[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "wr2023"
version = "0.0.1"
authors = [
  { name="Santiago Federico Caracciolo", email="santiago.caracciolo@gmail.com" },
]
description = "Codes of MODELING AND SYNTHESIS OF THE WISTAR RAT ELECTROCARDIOGRAM article."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "zarr",
  "ecg_tools @ git+https://github.com/sfcaracciolo/ecg_tools.git",
  "fpt_tools @ git+https://github.com/sfcaracciolo/fpt_tools.git",
  "wr_transform @ git+https://github.com/sfcaracciolo/wr_transform.git",
  "ecg_models @ git+https://github.com/sfcaracciolo/ecg_models.git"
]